Signup by email
  - New user-container component (for the new layout, the old one has been marked with `old` prefix)
  - Call signup endpoint with username, email and password
  - New check your email page
  - Use logo icons from sistema instead of Pastanaga

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -256,6 +256,7 @@
 	"link.create.error": "Error en carregar l'enllaç",
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
 	"login.check_email": "Comprova el teu correu!",
+	"login.check_email_details": "Feu clic a l'enllaç que acabeu de rebre a <strong>{{ email }}</strong> per finalitzar el vostre compte. Si no hi ha res a la vista... Comproveu la vostra carpeta de correu brossa 🙃!",
 	"login.company": "Empresa",
 	"login.continue_with": "Accedir amb",
 	"login.create_one": "Crea'n un!",
@@ -273,6 +274,7 @@
 	"login.full_name": "Nom complert",
 	"login.gogetflaps": "Coneix-ne més i registra't!",
 	"login.have_account": "No tens un compte?",
+	"login.have_account_already": "Ja tens un compte?",
 	"login.join_expedition": "Uneix-te a l’expedició en menys d’un minut",
 	"login.local_user_already_exists": "Ja existeix un usuari amb aquest correu electrónic. Per entrar introdueix la teva contrasenya.",
 	"login.login": "Accedir",
@@ -280,8 +282,10 @@
 	"login.privacy_policy": "Política de privacitat",
 	"login.recover": "Recuperar contrasenya",
 	"login.recover_help": "Problemes amb la paraula de pas?",
+	"login.resend_email": "Torna a enviar el correu electrònic",
 	"login.scope.kbs_read": "Accedir a les teves caixes de coneixement",
 	"login.scope.kbs_write": "Modificar les teves caixes de coneixement",
+	"login.sign-up-with": "Registra't amb <strong>{{provider}}</strong>",
 	"login.signup": "Registra't!",
 	"login.terms_and_conditions": "Termes i Condicions",
 	"login.title": "Benvingut/da a Flaps",
@@ -289,6 +293,7 @@
 	"login.try_again": "Torna-ho a intentar o recupera la contrasenya.",
 	"login.user_registered_as_external_user": "Ja existeix un usuari amb aquest correu electrònic. Si us plau, intenta entrar amb el teu compte de Google.",
 	"login.validate_and_explore": "Verifica el compte i comença a explorar",
+	"login.wrong_email": "Correu electrònic incorrecte?",
 	"modal.create_link.input": "Escriu o enganxa l’enllaç",
 	"modal.create_link.multiple": "Múltiples",
 	"modal.create_link.textarea": "Enganxeu alguns enllaços (un per línia)",
@@ -424,7 +429,6 @@
 	"setup.soon_more_areas": "Més zones per escollir properament",
 	"setup.upload_file": "Puja un arxiu",
 	"setup.upload_using_api": "Puja dades amb l'API",
-	"signup.sign-up-with": "Registra't amb <strong>{{provider}}</strong>",
 	"stash.add_user": "Afegeix l'usuari",
 	"stash.added_user": "L'usuari {{user}} s'ha afegit",
 	"stash.create": "Crea una caixa de coneixement",
@@ -573,6 +577,7 @@
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes. Les etiquetes es crearan automàticament si encara no estan definides al caixa de coneixement.",
 	"upload.use_folder_as_labels.label": "Utilitzeu noms de carpetes com a etiquetes",
 	"user.logout": "Sortir",
+	"validation.company-email": "Si us plau, utilitzeu un correu electrònic de l'empresa",
 	"validation.email": "Introdueix un correu electrònic vàlid",
 	"validation.language_required": "Selecciona un idioma",
 	"validation.name_required": "Introdueix el nom i cognoms",
