--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -298,6 +298,7 @@
 	"login.access_request": "wants to access Nuclia on your behalf and be able to:",
 	"login.agree": "I agree to Nuclia’s",
 	"login.check_email": "Check your email!",
+	"login.check_email_details": "Click on the link you just received at <strong>{{ email }}</strong> to finalize your account. If nothing in sight… Check your spam folder 🙃!",
 	"login.company": "Company",
 	"login.continue_with": "Log in with",
 	"login.create_one": "Create",
@@ -315,6 +316,7 @@
 	"login.full_name": "Full name",
 	"login.gogetflaps": "Learn more & sign up!",
 	"login.have_account": "Don’t have an account?",
+	"login.have_account_already": "Already have an account?",
 	"login.join_expedition": "Build your AI-powered search in minutes",
 	"login.local_user_already_exists": "A user with this email already exists. To log in, please enter your password.",
 	"login.login": "Log in",
@@ -322,8 +324,10 @@
 	"login.privacy_policy": "Privacy Policy",
 	"login.recover": "Recover password",
 	"login.recover_help": "Problems logging in?",
+	"login.resend_email": "Resend the email",
 	"login.scope.kbs_read": "View your Knowledge boxes",
 	"login.scope.kbs_write": "Modify your Knowledge boxes",
+	"login.sign-up-with": "Sign up with <strong>{{provider}}</strong>",
 	"login.signup": "Sign Up",
 	"login.terms_and_conditions": "Terms & Conditions",
 	"login.title": "Welcome to Nuclia",
@@ -331,6 +335,7 @@
 	"login.try_again": "Please try again or reset your password below.",
 	"login.user_registered_as_external_user": "A user with this email already exists. Please sign in with your Google Account.",
 	"login.validate_and_explore": "Please, verify your account",
+	"login.wrong_email": "Wrong email?",
 	"modal.create_link.input": "Type or paste the link",
 	"modal.create_link.multiple": "Multiple",
 	"modal.create_link.textarea": "Paste some links (one per line)",
@@ -473,7 +478,6 @@
 	"setup.soon_more_areas": "More areas coming soon",
 	"setup.upload_file": "Upload a file",
 	"setup.upload_using_api": "Upload using the API",
-	"signup.sign-up-with": "Sign up with <strong>{{provider}}</strong>",
 	"stash.add_user": "Add user",
 	"stash.added_user": "{{user}} has been added",
 	"stash.contact_admin": "You are not authorized to create a knowledge box. Contact your administrator.",
@@ -657,6 +661,7 @@
 	"upload.use_folder_as_labels.help": "First-level folder is the label set name, subfolders are labels. If subfolders are nested, files will get multiple labels. Labels will be created automatically if they are not defined in the knowledge box yet.",
 	"upload.use_folder_as_labels.label": "Use folder names as label names",
 	"user.logout": "Log out",
+	"validation.company-email": "Please use a company email",
 	"validation.email": "Enter a valid email",
 	"validation.language_required": "Select a language",
 	"validation.name_required": "Add your name and surnames",
