--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -256,6 +256,7 @@
 	"link.create.error": "Error al subir el enlace",
 	"login.access_request": "quiere acceder a tu cuenta de Nuclia y poder: ",
 	"login.check_email": "!Revisa tu correo!",
+	"login.check_email_details": "Haga clic en el enlace que acaba de recibir en <strong>{{ email }}</strong> para finalizar su cuenta. Si no hay nada a la vista… ¡Revisa tu carpeta de spam 🙃!",
 	"login.company": "Empresa",
 	"login.continue_with": "Iniciar con",
 	"login.create_one": "Créala!",
@@ -273,6 +274,7 @@
 	"login.full_name": "Nombre completo",
 	"login.gogetflaps": "Conoce más y registrate!",
 	"login.have_account": "¿No tienes una cuenta?",
+	"login.have_account_already": "¿Ya tienes una cuenta?",
 	"login.join_expedition": "Únete a la expedición en menos de un minuto",
 	"login.local_user_already_exists": "Ya existe un usuario con este correo electrónico. Para entrar introduce tu contraseña.",
 	"login.login": "Iniciar sesión",
@@ -280,8 +282,10 @@
 	"login.privacy_policy": "Política de privacidad",
 	"login.recover": "Recuperar contraseña",
 	"login.recover_help": "Problemas con la contraseña?",
+	"login.resend_email": "Vuelva a enviar el correo electrónico",
 	"login.scope.kbs_read": "Acceder a tus cajas de conocimiento",
 	"login.scope.kbs_write": "Modificar tus cajas de conocimiento",
+	"login.sign-up-with": "Regístrese con <strong>{{provider}}</strong>",
 	"login.signup": "Regístrate!",
 	"login.terms_and_conditions": "Términos y Condiciones",
 	"login.title": "Bienvenido/a a Flaps",
@@ -289,6 +293,7 @@
 	"login.try_again": "Vuelva a intentarlo o recupera la contraseña.",
 	"login.user_registered_as_external_user": "Ya existe un usuario con ese correo electrónico. Por favor, trate de entrar con su cuenta de Google.",
 	"login.validate_and_explore": "Verifica la cuenta y empieza a explorar ",
+	"login.wrong_email": "Email incorrecto?",
 	"modal.create_link.input": "Escribe o pega el enlace",
 	"modal.create_link.multiple": "Múltiple",
 	"modal.create_link.textarea": "Pegue algunos enlaces (uno por línea)",
@@ -424,7 +429,6 @@
 	"setup.soon_more_areas": "Más zonas para escoger próximamente",
 	"setup.upload_file": "Sube un archivo",
 	"setup.upload_using_api": "Sube datos con la API",
-	"signup.sign-up-with": "Regístrese con <strong>{{provider}}</strong>",
 	"stash.add_user": "Añadir usuario",
 	"stash.added_user": "El usuario {{user}} ha sido añadido",
 	"stash.create": "Crea una caja de conocimiento",
@@ -573,6 +577,7 @@
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas. Las etiquetas se crearán automáticamente si aún no están definidas en la caja de conocimiento.",
 	"upload.use_folder_as_labels.label": "Usar nombres de carpetas como etiquetas",
 	"user.logout": "Salir",
+	"validation.company-email": "Utilice un correo electrónico de la empresa",
 	"validation.email": "Introduce un correo electrónico válido",
 	"validation.language_required": "Selecciona un idioma",
 	"validation.name_required": "Añade tu nombre y apellidos",
