Redirect to new onboarding page after signing up

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -285,7 +285,7 @@
 	"login.resend_email": "Torna a enviar el correu electrònic",
 	"login.scope.kbs_read": "Accedir a les teves caixes de coneixement",
 	"login.scope.kbs_write": "Modificar les teves caixes de coneixement",
-	"login.sign-up-with": "Registra't amb <strong>{{provider}}</strong>",
+	"login.sign-up-with": "Registra't amb {{provider}}",
 	"login.signup": "Registra't!",
 	"login.terms_and_conditions": "Termes i Condicions",
 	"login.title": "Benvingut/da a Flaps",
@@ -309,6 +309,16 @@
 	"modal.upload.success": "Fitxer pujat correctament",
 	"modal.upload.title": "Puja els teus fitxers",
 	"modal.upload_folder": "Afegeix una carpeta",
+	"onboarding.consent": "En utilitzar aquest producte, accepteu els <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termes i condicions</a> i la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privadesa</a>.",
+	"onboarding.get_started": "Començar",
+	"onboarding.industry_label": "En quina indústria ets?",
+	"onboarding.industry_placeholder": "Trieu una indústria",
+	"onboarding.search_engine_label": "Estàs utilitzant actualment altres cercadors?",
+	"onboarding.search_engine_placeholder": "Estic una mica decebut amb...",
+	"onboarding.storage_zone": "Les teves dades seran allotjades a Europa. Si voleu que les vostres dades s'allotgin en un altre lloc, <a href=\"\"  target=\"_blank\">ompliu aquest formulari</a>.",
+	"onboarding.subtitle": "Un parell de preguntes ràpides i us posarem en marxa.",
+	"onboarding.title": "👋​ Benvinguts a Nuclia!",
+	"onboarding.updates": "Obteniu actualitzacions ocasionals sobre Nuclia",
 	"ontology.add_ontology": "Afegir etiquetes",
 	"ontology.customize_classification": "Personalitza la classificació.",
 	"ontology.delete_confirm_title": "Eliminar la classificació?",
