--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -327,7 +327,7 @@
 	"login.resend_email": "Resend the email",
 	"login.scope.kbs_read": "View your Knowledge boxes",
 	"login.scope.kbs_write": "Modify your Knowledge boxes",
-	"login.sign-up-with": "Sign up with <strong>{{provider}}</strong>",
+	"login.sign-up-with": "Sign up with {{provider}}",
 	"login.signup": "Sign Up",
 	"login.terms_and_conditions": "Terms & Conditions",
 	"login.title": "Welcome to Nuclia",
@@ -351,6 +351,16 @@
 	"modal.upload.success": "File uploaded successfully",
 	"modal.upload.title": "Upload your files",
 	"modal.upload_folder": "Add a folder",
+	"onboarding.consent": "By using this product, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
+	"onboarding.get_started": "Get started",
+	"onboarding.industry_label": "What industry are you in? ",
+	"onboarding.industry_placeholder": "Choose an industry",
+	"onboarding.search_engine_label": "Are you currently using other search engines?",
+	"onboarding.search_engine_placeholder": "I'm a little disappointed with…",
+	"onboarding.storage_zone": "Your data will be hosted in Europe. If you would like your data to be hosted elsewhere, <a href=\"\"  target=\"_blank\">fill this form</a>.",
+	"onboarding.subtitle": "A couple of quick questions, and we'll get you started.",
+	"onboarding.title": "👋​ Welcome to Nuclia!",
+	"onboarding.updates": "Get occasional updates about Nuclia",
 	"ontology.add_ontology": "Add label set",
 	"ontology.customize_classification": "Customize the classification.",
 	"ontology.delete_confirm_title": "Delete classification?",
