--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -285,7 +285,7 @@
 	"login.resend_email": "Vuelva a enviar el correo electrónico",
 	"login.scope.kbs_read": "Acceder a tus cajas de conocimiento",
 	"login.scope.kbs_write": "Modificar tus cajas de conocimiento",
-	"login.sign-up-with": "Regístrese con <strong>{{provider}}</strong>",
+	"login.sign-up-with": "Regístrese con {{provider}}",
 	"login.signup": "Regístrate!",
 	"login.terms_and_conditions": "Términos y Condiciones",
 	"login.title": "Bienvenido/a a Flaps",
@@ -309,6 +309,16 @@
 	"modal.upload.success": "Archivo cargado con éxito",
 	"modal.upload.title": "Sube tus ficheros",
 	"modal.upload_folder": "Añade una carpeta",
+	"onboarding.consent": "Al utilizar este producto, acepta los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
+	"onboarding.get_started": "Empezar",
+	"onboarding.industry_label": "En que industria estás?",
+	"onboarding.industry_placeholder": "Elige una industria",
+	"onboarding.search_engine_label": "¿Utiliza actualmente otros motores de búsqueda?",
+	"onboarding.search_engine_placeholder": "Estoy un poco decepcionado con…",
+	"onboarding.storage_zone": "Tus datos estarán alojados en Europa. Si desea que sus datos se alojen en otro lugar, <a href=\"\"  target=\"_blank\">complete este formulario</a>.",
+	"onboarding.subtitle": "Un par de preguntas rápidas y lo ayudaremos a comenzar.",
+	"onboarding.title": "👋​ ¡Bienvenidos a Nuclia!",
+	"onboarding.updates": "Recibe actualizaciones ocasionales sobre Nuclia",
 	"ontology.add_ontology": "Añadir etiquetas",
 	"ontology.customize_classification": "Personaliza la clasificación.",
 	"ontology.delete_confirm_title": "¿Eliminar clasificación?",
