Creating account and kb + redirecting to resource list

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -309,12 +309,15 @@
 	"modal.upload.success": "Fitxer pujat correctament",
 	"modal.upload.title": "Puja els teus fitxers",
 	"modal.upload_folder": "Afegeix una carpeta",
+	"onboarding.account_creation": "Creació del compte...",
 	"onboarding.consent": "En utilitzar aquest producte, accepteu els <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termes i condicions</a> i la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privadesa</a>.",
 	"onboarding.get_started": "Començar",
 	"onboarding.industry_label": "En quina indústria ets?",
 	"onboarding.industry_placeholder": "Trieu una indústria",
+	"onboarding.kb_creation": "Creació de la caixa de coneixement...",
 	"onboarding.search_engine_label": "Estàs utilitzant actualment altres cercadors?",
 	"onboarding.search_engine_placeholder": "Estic una mica decebut amb...",
+	"onboarding.setting_up": "👍 Estem configurant el teu compte",
 	"onboarding.storage_zone": "Les teves dades seran allotjades a Europa. Si voleu que les vostres dades s'allotgin en un altre lloc, <a href=\"\"  target=\"_blank\">ompliu aquest formulari</a>.",
 	"onboarding.subtitle": "Un parell de preguntes ràpides i us posarem en marxa.",
 	"onboarding.title": "👋​ Benvinguts a Nuclia!",
