--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -351,12 +351,15 @@
 	"modal.upload.success": "File uploaded successfully",
 	"modal.upload.title": "Upload your files",
 	"modal.upload_folder": "Add a folder",
+	"onboarding.account_creation": "Account creation…",
 	"onboarding.consent": "By using this product, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
 	"onboarding.get_started": "Get started",
 	"onboarding.industry_label": "What industry are you in? ",
 	"onboarding.industry_placeholder": "Choose an industry",
+	"onboarding.kb_creation": "Knowledge box creation…",
 	"onboarding.search_engine_label": "Are you currently using other search engines?",
 	"onboarding.search_engine_placeholder": "I'm a little disappointed with…",
+	"onboarding.setting_up": "👍 We're setting your account up",
 	"onboarding.storage_zone": "Your data will be hosted in Europe. If you would like your data to be hosted elsewhere, <a href=\"\"  target=\"_blank\">fill this form</a>.",
 	"onboarding.subtitle": "A couple of quick questions, and we'll get you started.",
 	"onboarding.title": "👋​ Welcome to Nuclia!",
