--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -309,12 +309,15 @@
 	"modal.upload.success": "Archivo cargado con éxito",
 	"modal.upload.title": "Sube tus ficheros",
 	"modal.upload_folder": "Añade una carpeta",
+	"onboarding.account_creation": "Creación de cuenta…",
 	"onboarding.consent": "Al utilizar este producto, acepta los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
 	"onboarding.get_started": "Empezar",
 	"onboarding.industry_label": "En que industria estás?",
 	"onboarding.industry_placeholder": "Elige una industria",
+	"onboarding.kb_creation": "Creación de caja de conocimiento…",
 	"onboarding.search_engine_label": "¿Utiliza actualmente otros motores de búsqueda?",
 	"onboarding.search_engine_placeholder": "Estoy un poco decepcionado con…",
+	"onboarding.setting_up": "👍 Estamos configurando tu cuenta",
 	"onboarding.storage_zone": "Tus datos estarán alojados en Europa. Si desea que sus datos se alojen en otro lugar, <a href=\"\"  target=\"_blank\">complete este formulario</a>.",
 	"onboarding.subtitle": "Un par de preguntas rápidas y lo ayudaremos a comenzar.",
 	"onboarding.title": "👋​ ¡Bienvenidos a Nuclia!",
