Update login pages with new layout
  - Login page:
    - New layout
    - New sso buttons
    - Better error management
  - New layout + form improvements on:
     - recover component
     - reset component

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -255,12 +255,11 @@
 	"language.tr": "Turc",
 	"link.create.error": "Error en carregar l'enllaç",
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
-	"login.boarding_subtitle": "Troba-ho tot.",
 	"login.boarding_title": "Embarcament a Nuclia",
 	"login.check_email": "Comprova el teu correu!",
 	"login.check_email_details": "Feu clic a l'enllaç que acabeu de rebre a <strong>{{ email }}</strong> per finalitzar el vostre compte. Si no hi ha res a la vista... Comproveu la vostra carpeta de correu brossa 🙃!",
 	"login.company": "Empresa",
-	"login.continue_with": "Accedir amb",
+	"login.continue_with": "Inicieu sessió amb {{provider}}",
 	"login.create_one": "Crea'n un!",
 	"login.description": "Coneix el què la teva empresa sap",
 	"login.email": "Correu electrònic",
@@ -289,6 +288,7 @@
 	"login.scope.kbs_write": "Modificar les teves caixes de coneixement",
 	"login.sign-up-with": "Registra't amb {{provider}}",
 	"login.signup": "Registra't!",
+	"login.subtitle": "Troba-ho tot.",
 	"login.terms_and_conditions": "Termes i Condicions",
 	"login.title": "Benvingut/da a Flaps",
 	"login.token_expired": "El token ha caducat",
@@ -367,10 +367,9 @@
 	"recover.recover": "Recuperar",
 	"recover.title": "Recupera la contrasenya",
 	"recover.verify": "Verifica el compte per canviar la contrasenya",
-	"reset.description": "Crea o modifica la teva contrasenya",
 	"reset.password": "Nova contrasenya",
 	"reset.password_reset": "S'ha restaurat la contrasenya",
-	"reset.title": "Crear contrasenya",
+	"reset.title": "Restablir la contrasenya",
 	"resource.add_labels": "Afegeix etiquetes",
 	"resource.add_labels_error": "S'ha produït un error en afegir etiquetes als recursos {{count}}",
 	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
