--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -297,12 +297,11 @@
 	"link.create.error": "Error when uploading the link",
 	"login.access_request": "wants to access Nuclia on your behalf and be able to:",
 	"login.agree": "I agree to Nuclia’s",
-	"login.boarding_subtitle": "Find everything.",
 	"login.boarding_title": "Boarding Nuclia",
 	"login.check_email": "Check your email!",
 	"login.check_email_details": "Click on the link you just received at <strong>{{ email }}</strong> to finalize your account. If nothing in sight… Check your spam folder 🙃!",
 	"login.company": "Company",
-	"login.continue_with": "Log in with",
+	"login.continue_with": "Log in with {{provider}}",
 	"login.create_one": "Create",
 	"login.description": "Know what your company knows",
 	"login.email": "Email",
@@ -331,6 +330,7 @@
 	"login.scope.kbs_write": "Modify your Knowledge boxes",
 	"login.sign-up-with": "Sign up with {{provider}}",
 	"login.signup": "Sign Up",
+	"login.subtitle": "Find everything.",
 	"login.terms_and_conditions": "Terms & Conditions",
 	"login.title": "Welcome to Nuclia",
 	"login.token_expired": "Token has expired",
@@ -413,10 +413,9 @@
 	"recover.recover": "Recover",
 	"recover.title": "Recover your password",
 	"recover.verify": "Check your email and use the provided link to change your password",
-	"reset.description": "Create or modify your password",
 	"reset.password": "New password",
 	"reset.password_reset": "Your password has been reset",
-	"reset.title": "Create password",
+	"reset.title": "Reset password",
 	"resource.add_labels": "Add labels",
 	"resource.add_labels_error": "An error occurred while adding labels on {{count}} resources",
 	"resource.add_labels_success": "Labels successfully added on {{count}} resources",
