--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -255,12 +255,11 @@
 	"language.tr": "Turco",
 	"link.create.error": "Error al subir el enlace",
 	"login.access_request": "quiere acceder a tu cuenta de Nuclia y poder: ",
-	"login.boarding_subtitle": "Encuentra todo.",
 	"login.boarding_title": "Embarque Nuclia",
 	"login.check_email": "!Revisa tu correo!",
 	"login.check_email_details": "Haga clic en el enlace que acaba de recibir en <strong>{{ email }}</strong> para finalizar su cuenta. Si no hay nada a la vista… ¡Revisa tu carpeta de spam 🙃!",
 	"login.company": "Empresa",
-	"login.continue_with": "Iniciar con",
+	"login.continue_with": "Inicie sesión con {{provider}}",
 	"login.create_one": "Créala!",
 	"login.description": "Conoce lo que tu empresa sabe",
 	"login.email": "Correo electrónico",
@@ -289,6 +288,7 @@
 	"login.scope.kbs_write": "Modificar tus cajas de conocimiento",
 	"login.sign-up-with": "Regístrese con {{provider}}",
 	"login.signup": "Regístrate!",
+	"login.subtitle": "Encuentra todo.",
 	"login.terms_and_conditions": "Términos y Condiciones",
 	"login.title": "Bienvenido/a a Flaps",
 	"login.token_expired": "El token ha caducado",
@@ -367,10 +367,9 @@
 	"recover.recover": "Recuperar",
 	"recover.title": "Recupera la contraseña",
 	"recover.verify": "Verifica la cuenta para cambiar la contraseña",
-	"reset.description": "Crea o modifica tu contraseña",
 	"reset.password": "Nueva contraseña",
 	"reset.password_reset": "Se ha restablecido la contraseña",
-	"reset.title": "Crea contraseña",
+	"reset.title": "Restablecer la contraseña",
 	"resource.add_labels": "Agregar etiquetas",
 	"resource.add_labels_error": "Se produjo un error al agregar etiquetas en {{count}} recursos",
 	"resource.add_labels_success": "Etiquetas añadidas correctamente en {{count}} recursos",
