--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -316,11 +316,12 @@
 	"onboarding.get_started": "Començar",
 	"onboarding.industry_label": "En quina indústria ets?",
 	"onboarding.industry_placeholder": "Trieu una indústria",
-	"onboarding.kb_creation": "Creació de la caixa de coneixement...",
+	"onboarding.kb_creation": "Creació d'emmagatzematge...",
 	"onboarding.search_engine_label": "Estàs utilitzant actualment altres cercadors?",
 	"onboarding.search_engine_placeholder": "Estic una mica decebut amb...",
-	"onboarding.setting_up": "👍 Estem configurant el teu compte",
-	"onboarding.storage_zone": "Les teves dades seran allotjades a Europa. Si voleu que les vostres dades s'allotgin en un altre lloc, <a href=\"\"  target=\"_blank\">ompliu aquest formulari</a>.",
+	"onboarding.setting_up": "⏳ Estem configurant el teu compte",
+	"onboarding.setting_up_subtitle": "El vostre compte estarà llest en menys d'un minut!",
+	"onboarding.storage_zone": "Les teves dades seran allotjades a Europa. Si voleu que les vostres dades s'allotgin en un altre lloc, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">ompliu aquest formulari</a>.",
 	"onboarding.subtitle": "Un parell de preguntes ràpides i us posarem en marxa.",
 	"onboarding.title": "👋​ Benvinguts a Nuclia!",
 	"onboarding.updates": "Obteniu actualitzacions ocasionals sobre Nuclia",
