--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -358,11 +358,12 @@
 	"onboarding.get_started": "Get started",
 	"onboarding.industry_label": "What industry are you in? ",
 	"onboarding.industry_placeholder": "Choose an industry",
-	"onboarding.kb_creation": "Knowledge box creation…",
+	"onboarding.kb_creation": "Storage creation…",
 	"onboarding.search_engine_label": "Are you currently using other search engines?",
 	"onboarding.search_engine_placeholder": "I'm a little disappointed with…",
-	"onboarding.setting_up": "👍 We're setting your account up",
-	"onboarding.storage_zone": "Your data will be hosted in Europe. If you would like your data to be hosted elsewhere, <a href=\"\"  target=\"_blank\">fill this form</a>.",
+	"onboarding.setting_up": "⏳ ​ We’re setting your account up",
+	"onboarding.setting_up_subtitle": "Your account will be ready in less than a minute! ",
+	"onboarding.storage_zone": "Your data will be hosted in Europe. If you would like your data to be hosted elsewhere, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">fill this form</a>.",
 	"onboarding.subtitle": "A couple of quick questions, and we'll get you started.",
 	"onboarding.title": "👋​ Welcome to Nuclia!",
 	"onboarding.updates": "Get occasional updates about Nuclia",
