--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -316,11 +316,12 @@
 	"onboarding.get_started": "Empezar",
 	"onboarding.industry_label": "En que industria estás?",
 	"onboarding.industry_placeholder": "Elige una industria",
-	"onboarding.kb_creation": "Creación de caja de conocimiento…",
+	"onboarding.kb_creation": "Creación de almacenamiento…",
 	"onboarding.search_engine_label": "¿Utiliza actualmente otros motores de búsqueda?",
 	"onboarding.search_engine_placeholder": "Estoy un poco decepcionado con…",
-	"onboarding.setting_up": "👍 Estamos configurando tu cuenta",
-	"onboarding.storage_zone": "Tus datos estarán alojados en Europa. Si desea que sus datos se alojen en otro lugar, <a href=\"\"  target=\"_blank\">complete este formulario</a>.",
+	"onboarding.setting_up": "⏳ Estamos configurando tu cuenta",
+	"onboarding.setting_up_subtitle": "¡Tu cuenta estará lista en menos de un minuto!",
+	"onboarding.storage_zone": "Tus datos estarán alojados en Europa. Si desea que sus datos se alojen en otro lugar, <a href=\"https://docs.google.com/forms/d/1B9jaohdISwX-i0v34gUqkDBmJ2VXLtS96Fjs3mdIMOs\"  target=\"_blank\">complete este formulario</a>.",
 	"onboarding.subtitle": "Un par de preguntas rápidas y lo ayudaremos a comenzar.",
 	"onboarding.title": "👋​ ¡Bienvenidos a Nuclia!",
 	"onboarding.updates": "Recibe actualizaciones ocasionales sobre Nuclia",
