[sc-3248] Import text resources from a CSV dev

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -556,17 +556,22 @@
 	"upload.audios_detected": "Hem detectat arxius d’audio. Per a continuar, selecciona l’arxiu i el seu idioma.",
 	"upload.check_files": "Comprova l'estat dels fitxers",
 	"upload.completed": "completat",
+	"upload.csv_description": "Crea multiples recursos seleccionant un arxiu CSV amb 3 columnes: <code>Títol,Contingut,Format</code>",
+	"upload.csv_format": "en que la columna <code>Format</code> pot ser un d'aquests valors: <code>PLAIN MARKDOWN HTML RST</code>",
 	"upload.duplicated": "Fitxer duplicat",
 	"upload.error": "Error desconegut",
 	"upload.files": "Carregueu fitxers",
 	"upload.folder": "Carregueu una carpeta",
+	"upload.invalid_csv": "L'arxiu CSV no és vàlid",
 	"upload.invalid_image": "El fitxer seleccionat no és una imatge vàlida",
 	"upload.link": "Afegeix enllaços",
 	"upload.once_uploaded": "Un cop  pujats, des de la pàgina \"Llistat de recursos\", podràs veure'n l'estat. Quan el semàfor del recurs sigui verd el podràs cercar i visualitzar.",
+	"upload.select_csv": "Seleccionar CSV",
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
 	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
 	"upload.size_warning_2": "Els fitxers que superin aquesta mida no es penjaran",
 	"upload.takes_time": "Nuclia necessita una estona per a processar els fitxers.",
+	"upload.upload_from_csv": "Afegir recursos des de CSV",
 	"upload.uploading_files": "<strong>Càrrega de fitxers.</strong> Mentrestant, no dubteu a utilitzar Nuclia",
 	"upload.uploading_queue": "Cua de pujades",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes. Les etiquetes es crearan automàticament si encara no estan definides al caixa de coneixement.",
