--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -638,19 +638,24 @@
 	"upload.audios_detected": "We detected audio files. To continue, select the file and its language.",
 	"upload.check_files": "Check file status",
 	"upload.completed": "completed",
+	"upload.csv_description": "Create multiple resource by selecting a CSV file with 3 columns: <code>Title,Body,Format</code>",
+	"upload.csv_format": "where <code>Format</code> column must be one of theses values: <code>PLAIN MARKDOWN HTML RST</code>",
 	"upload.duplicated": "Duplicated file",
 	"upload.error": "Unknown error",
 	"upload.files": "Upload files",
 	"upload.folder": "Upload a folder",
+	"upload.invalid_csv": "Invalid CSV file",
 	"upload.invalid_image": "Selected file is not a valid image",
 	"upload.link": "Add links",
 	"upload.once_uploaded": "Once uploaded, you can see the status from the resource list page. When the resource status is green, it will show up in search results.",
 	"upload.progress.conflicts": "Conflicts",
 	"upload.progress.failed": "Failed",
+	"upload.select_csv": "Select CSV",
 	"upload.select_file": "Drop your file(s) or click here",
 	"upload.size_warning_1": "Media files can not exceed {{ maxMedia }} and non-media files {{ max }}.",
 	"upload.size_warning_2": "Files exceeding this size will not be uploaded",
 	"upload.takes_time": "We needs some time to process the files. Feel free to close this dialog box and keep working.",
+	"upload.upload_from_csv": "Add resources from CSV",
 	"upload.uploading_files": "<strong>Uploading files.</strong> Feel free to use Nuclia in the meantime",
 	"upload.uploading_queue": "Upload queue",
 	"upload.use_folder_as_labels.help": "First-level folder is the label set name, subfolders are labels. If subfolders are nested, files will get multiple labels. Labels will be created automatically if they are not defined in the knowledge box yet.",
