--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -556,17 +556,22 @@
 	"upload.audios_detected": "Hemos detectado ficheros  de audio. Para continuar, selecciona el archivo y su idioma.",
 	"upload.check_files": "Comprueba el estado de los ficheros",
 	"upload.completed": "completado",
+	"upload.csv_description": "Crea multiples recursos seleccionando un archivo CSV con 3 columnas: <code>Título,Contenido,Formato</code>",
+	"upload.csv_format": "en que la columna <code>Formato</code> puede ser uno de estos valores:\n<code>PLAIN MARKDOWN HTML RST</code>",
 	"upload.duplicated": "Fichero duplicado",
 	"upload.error": "Error desconocido",
 	"upload.files": "Subir archivos",
 	"upload.folder": "Subir una carpeta",
+	"upload.invalid_csv": "El archivo CSV no es válido",
 	"upload.invalid_image": "El archivo seleccionad no es una imagen válida",
 	"upload.link": "Agregar enlaces",
 	"upload.once_uploaded": "Una vez subidos, desde la página \"Listado de recursos\", podrás ver su estado. Cuando el semáforo del recurso sea verde lo podrás buscar y visualizar.",
+	"upload.select_csv": "Seleccionar CSV",
 	"upload.select_file": "Arrastre sus archivos o haga clic aquí",
 	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
 	"upload.size_warning_2": "Los archivos que excedan este tamaño no se cargarán",
 	"upload.takes_time": "Nuclia necesita un rato para procesar los archivos.",
+	"upload.upload_from_csv": "Añadir recursos desde CSV",
 	"upload.uploading_files": "<strong>Subiendo archivos.</strong> Siéntase libre de usar Nuclia mientras tanto",
 	"upload.uploading_queue": "Cola de subidas",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas. Las etiquetas se crearán automáticamente si aún no están definidas en la caja de conocimiento.",
